--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -29,8 +29,8 @@ The original RoadMap was (and still is) developped by Pascal Martin (pascal
 dot martin at iname dot com). A version of RoadMap for the Sharp Zaurus was
 developped by Latchesar Ionkov (who wrote the original QT support). The
 support for the Digital Charts of the World was contributed by Stephen
-Woodbridge. The version of RoadMap for Windows is developped and supported
-by Ehud Shabtai (eshabtai at gmail dot com).
+Woodbridge. The version of RoadMap for Windows (PocketPC) is developped and
+supported by Ehud Shabtai (eshabtai at gmail dot com).
 <P>
 The latest Roadmap sources are also available from <A class=normal
 href="http://sourceforge.net/projects/roadmap/">Sourceforge's CVS</A>.
@@ -65,6 +65,8 @@ The RoadMap files below are tar files compressed using <b>gzip</b>.
    href="roadmap/roadmap_1_0_11_i686.tar.gz">Linux/i686 binaries</A>,
 <A class=normal 
    href="roadmap/roadmap_1_0_11_armv4l.tar.gz">Linux/ARM binaries</A>,
+<A class=normal 
+   href="roadmap/roadmap_1_0_11_ppc_arm.zip">Microsoft PocketPC/ARM binaries</A>.
 <A class=normal 
    href="roadmap/roadmap_1_0_11_doc.tar.gz">Documentation</A>.
 
