--- a/trunk/roadmap/web/hardware.html
+++ b/trunk/roadmap/web/hardware.html
@@ -43,6 +43,7 @@ to use a standard USB communication device model.
          href="http://familiar.handhelds.org/">Familiar/Linux</a>. Please check
       the <a class="normal" href="http://www.handhelds.org/">Handhelds.org
       site</a> for more information on supported models.
+  <LI>HP IPAQ running Microsoft's PocketPC 2002 or less worse (i.e., better).
   <LI><a class="normal" href="http://www.myzaurus.com/">Sharp Zaurus</a>.
   <LI><a class="normal" href="http://www.apple.com/">Apple G3</a> (and
       possibly most PowerPC MAC models) running
