--- a/trunk/roadmap/web/index.html
+++ b/trunk/roadmap/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML><HEAD><TITLE>RoadMap: car navigation system for Linux and UNIX</TITLE>
+<HTML><HEAD><TITLE>RoadMap: car navigation system for Linux and UNIX (and PocketPC too)</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=windows-1252"><LINK 
 href="sitestandard.css" type=text/css rel=stylesheet>
 </HEAD>
@@ -7,7 +7,7 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <CENTER>
 <img SRC="roadmap-right.png" align="middle" border="0">
 <P>
-<H1>A Car Navigation System for Linux and UNIX</H1>
+<H1>A Car Navigation System for Linux and UNIX (and PocketPC too)</H1>
 </CENTER>
 <BR>
 <HR>
@@ -33,8 +33,8 @@ The original RoadMap was (and still is) developped by Pascal Martin (pascal
 dot martin at iname dot com). A version of RoadMap for the Sharp Zaurus was
 developped by Latchesar Ionkov (who wrote the original QT support). The
 support for the Digital Charts of the World was contributed by Stephen
-Woodbridge. The version of RoadMap for Windows is developped and supported
-by Ehud Shabtai (eshabtai at gmail dot com).
+Woodbridge. The version of RoadMap for Windows (PocketPC) is developped and
+supported by Ehud Shabtai (eshabtai at gmail dot com).
 <P>
 The latest Roadmap sources are also available from <A class=normal
 href="http://sourceforge.net/projects/roadmap/">Sourceforge's CVS</A>.
