--- a/trunk/roadmap/web/history.html
+++ b/trunk/roadmap/web/history.html
@@ -23,6 +23,24 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 a server upgrade, the RoadMap e-mail list has been lost. Please subscribe to
 the list again if you have not done so already. Sorry for the inconvenience.
 <HR> <BR>
+<P>Roadmap v1.0.12 (???)
+<UL>
+  <LI>Show the preference categories sorted in alphabetucal order, to
+      makes it easier to retrieve a category tab.
+  <LI>Expand all paths, including the hard-coded ones (Ehud Shabtai).
+  <LI>Fix the handling of the end-of-file when the GPS source is a NMEA log
+      file.
+  <LI>User preference to decide where is the toolbar: top (default), right,
+      bottom or left. (Not yet available on Windows CE.)
+  <LI>A fix for the shape gap filler code in buildmap. buildmap generated
+      wrong shapes for long lines (Ehud Shabtai).
+  <LI>The menus are now user configurable, in a way similar to the toolbar.
+      The actions can be renamed, to match the size of the screen better
+      (Paul Fox and I).
+  <LI>The minimal mouse/pen movement required to initiate a map drag is
+      now configurable: some screen digitizers have a significant jitter,
+      but a large value is incomfortable on a desktop machine (Paul Fox).
+</UL>
 <P>Roadmap v1.0.11 (september 9, 2005)
 <UL>
   <LI>Merged a patch from Gergely Molnar to make screenshots of the
