--- a/trunk/roadmap/web/history.html
+++ b/trunk/roadmap/web/history.html
@@ -25,6 +25,12 @@ the list again if you have not done so already. Sorry for the inconvenience.
 <HR> <BR>
 <P>Roadmap v1.0.12 (???)
 <UL>
+  <LI>Reworked the roadmap_trip.c API, to have a common API between the
+      current trip module and the upcoming one from Paul.
+  <LI>Make RoadMap resynchronize with the graphic engine (X11) before drawing
+      a new map. Don't redraw if the graphic engine is busy. This is intended
+      as an attempt to avoid overloading the X server on a PDA (Paul Fox).
+  <LI>Support defining a sprite as an alias of another sprite (Paul Fox).
   <LI>Show the preference categories sorted in alphabetucal order, to
       makes it easier to retrieve a category tab.
   <LI>Expand all paths, including the hard-coded ones (Ehud Shabtai).
