--- a/trunk/roadmap/web/maps.html
+++ b/trunk/roadmap/web/maps.html
@@ -19,6 +19,11 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="todo.html">Todo</a>
 <HR>
 <P>
+<center>
+<b>New maps built from the TIGER 2004 Second Edition files!</b>
+</center>
+<HR>
+<P>
 <b>Disclaimer</b>: RoadMap is known to have bugs. The data provided by
 the US Census Bureau is known to have errors. The RoadMap maps generated
 from the US Census Bureau data contain even more errors. <b> Use RoadMap
@@ -39,6 +44,9 @@ Stay tuned!
 Digital Charts of the World (DCW). The official horizontal accuracy of
 the DCW is 2040 meters: the resulting maps are therefore unusable for car
 navigation in their current state.
+<P>
+<b>Caution</b>: these maps require RoadMap version 1.0.8 and later. They
+are not compatible with earlier versions of RoadMap.
 <HR>
 <P>
 The data used for the US states and territories comes from the Census Bureau,
@@ -70,8 +78,6 @@ This file must be present in the map directory or RoadMap will not work.
   <LI><A class=normal href="maps/usdir.rdm.tgz">
          map directory for RoadMap version 1.0.8 and later</A> (includes
          support for the Digital Charts of the World maps, see below).</LI>
-  <LI><A class=normal href="maps/old-usdir.rdm.tgz">
-         map directory for RoadMap version 1.0.7 and earlier</A></LI>
 </UL>
 <P>The following files are gzipped tar files that contain the RoadMap map 
 files, one tar file per state. (To install the map files: go to the final map 
