--- a/trunk/roadmap/web/documentation.html
+++ b/trunk/roadmap/web/documentation.html
@@ -25,6 +25,8 @@ href="sitestandard.css" type=text/css rel=stylesheet>
    <LI><a class="normal" href="manual.html">The RoadMap manual</a>.
    <LI><a class="normal" href="familiar.html">Installation notes for Familiar
        Linux</a>.
+   <LI><a class="normal" href="makemaps.html">Guide to creating new
+	maps for RoadMap</a>.
 </UL>
 </BODY>
 </HTML>
