--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -26,7 +26,7 @@ support for the Digital Charts of the World was contributed by Stephen
 Woodbridge. The version of RoadMap for Windows (PocketPC) is developed and
 supported by Ehud Shabtai (eshabtai at gmail dot com).
 <P>
-The latest Roadmap sources are also available from <A class=normal
+The latest Roadmap sources are available from <A class="normal"
 href="http://sourceforge.net/projects/roadmap/">Sourceforge's CVS</A>.
 <P>
 <H2>Disclaimer</H2>
@@ -42,8 +42,8 @@ use RoadMap, not the driver.
 <HR>
 <CENTER>
 <P>
-Starting with release 1.1.0, RoadMap downloads are from 
-   href="http://sourceforge.net/projects/roadmap/">Sourceforge</A>.
+Starting with release 1.1.0, RoadMap downloads are from <a class="normal"
+href="http://sourceforge.net/projects/roadmap/">Sourceforge</A>.
 <P>
 A version of RoadMap 1.0.12 for the Sharp Zaurus is also available from
 Wendell Turner's
@@ -52,11 +52,16 @@ Wendell Turner's
   Sharp Zaurus ipk
 </A>.
 <P>
-The latest Roadmap sources are also available from
+The latest Roadmap sources are available from
 <A class="normal"
    href="http://sourceforge.net/projects/roadmap/">Sourceforge</A>.
 </CENTER>
 <HR>
+<H2>
+The releases listed below are older.  Please visit Sourceforge for
+the latest code.
+</H2>
+
 The RoadMap files below are tar files compressed using <b>gzip</b>.
 
 <P>RoadMap v1.0.12p2:
