--- a/trunk/roadmap/web/screenshots.html
+++ b/trunk/roadmap/web/screenshots.html
@@ -37,7 +37,8 @@ valign="center">
   <TR vAlign=top>
     <TD width="50%">
       <center>
-        RoadMap 1.1.0 showing display of an on-screen route.  This
+        RoadMap 1.1.0 showing display of an on-screen route (green
+	directional markers) and actual track followed (purple dots).  This
 	display shows anti-aliased lines, drawn with AGG support.</TD>
       </center>
     <TD width="50%">
