--- a/trunk/roadmap/web/maps.html
+++ b/trunk/roadmap/web/maps.html
@@ -58,8 +58,9 @@ the map directory, state boundaries for the continental US, and the
 map covering the city of San Francisco.  Note that the map directory
 included here is minimal, to reduce download time.  If you download other
 maps as well, you'll need to download the full map directory, below.
-<HR> <BR>
-<P>The next file is the RoadMap map directory. It is used by RoadMap
+<HR>
+<P>
+The next file is the RoadMap map directory. It is used by RoadMap
 to decide what file(s) of data should be loaded for the specific area you're
 trying to view.
 This file must be present in the map directory or RoadMap will not work. 
