--- a/trunk/roadmap/web/maps.html
+++ b/trunk/roadmap/web/maps.html
@@ -36,20 +36,26 @@ you can be sure we'll only make changes for good reasons!
 <b>Note #3</b>: these maps require RoadMap version 1.1.0 and later. They
 are not compatible with earlier versions of RoadMap.
 <P>
+If you need maps for 1.0.12, they are available here:
+	<a href="maps-1.0.12">maps-1.0.12</a>.
+<P>
+If you need maps for 1.0.8 (you shouldn't!), they are available here:
+	<a href="maps-1.0.8">maps-1.0.8</a>.
+<P>
 <b>Caution</b>: given the state of RoadMap development, there's a very
 good chance that the map data format might change again in a release
 or two.  Apologies in advance for any inconvenience this may cause, but
 you can be sure we'll only make changes for good reasons!
 <HR>
 <P>
-<CENTER>
-The maps available here are really big, and bandwidth
+The maps available here are <b>big</b>, and bandwidth
 is expensive. A limit may be set on the site's bandwidth at any time.
-<P>
-We suggest using <e>wget</e> with the --limit-rate=15k option.
-<P>
+<br>
+We suggest using <e>wget</e> with a rate-limiting option, e.g.:
+<pre>
+     wget --limit-rate=15k http://roadmap.digitalomaha.net/maps/usdir.rdm.tgz
+</pre>
 Thank you for your understanding.
-</CENTER>
 <HR>
 <p>
 <b>Demo file</b> -- if all you want to do is give RoadMap a trial run, then
@@ -82,6 +88,8 @@ The data used for the US states and territories comes from
 an agency of the U.S. Government, and is in the public domain. Therefore, the
 RoadMap maps of the US states and territories are in the public domain.
 <P>
+The maps linked to below are all available directly in here:
+	<a href="maps-1.1.0">maps-1.1.0</a>.
 <CENTER>
 <TABLE width="100%">
   <TBODY>
