--- a/trunk/roadmap/web/navbar.html
+++ b/trunk/roadmap/web/navbar.html
@@ -1,3 +1,4 @@
+<!-- start of navigation bar -->
 <div class="navigation-bar">
   <a class="navbar-image" href="index.html"><span class="navbar-image"></span></a>
   <a id="first-navitem"
@@ -7,4 +8,5 @@
   <a class="navitem" href="screenshots.html">Screenshots</a> <span class="invisible">|</span>
   <a class="navitem" href="maps.html">Maps</a> <span class="invisible">|</span>
   <a class="navitem" href="list.html">Mailing list</a>
-</div> <!-- end of navigation bar -->
+</div>
+<!-- end of navigation bar -->
