--- a/trunk/roadmap/web/index.html
+++ b/trunk/roadmap/web/index.html
@@ -10,6 +10,10 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 </CENTER>
 <BR>
 
+<p>In addition to this introductory page, you might want to look at
+a short note describing <a class="normal" href="status.html">
+current project status</a>.
+
 <H2>Introduction</H2>
 
 <P>The following is a short description of RoadMap. More information is
