--- a/trunk/roadmap/web/navbar.html
+++ b/trunk/roadmap/web/navbar.html
@@ -4,6 +4,7 @@
   <a id="first-navitem"
 
      class="navitem" href="index.html">Home</a> <span class="invisible">|</span>
+   <a class="navitem2" href="status.html">Status</a> <span class="invisible">|</span>
   <a class="navitem" href="documentation.html">Documentation</a> <span class="invisible">|</span>
    <a class="navitem2" href="manual.html">Manual</a> <span class="invisible">|</span>
    <a class="navitem2" href="installation.html">Quickstart</a> <span class="invisible">|</span>
