--- a/trunk/roadmap/web/maps.html
+++ b/trunk/roadmap/web/maps.html
@@ -300,6 +300,8 @@ it's out of date in many cases anyway.
 you're using any of the US and/or Canadian maps above, since
 you'll end up with duplicated roads -- one version of the
 road in the right place, and another off by as much as a mile.
+(Of course, if you want to see Mexican or Cuban roads, you may not
+have much choice.)
 <br>
         <LI><A class=normal href="http://roadmap.digitalomaha.net/maps/dcwNAM.tar.gz">North America</A> 
       </UL>
