--- a/trunk/roadmap/web/maps.html
+++ b/trunk/roadmap/web/maps.html
@@ -270,7 +270,9 @@ materials are all in the public domain.
 The DCW roads data is
 <a href="http://roadmap.digitalomaha.net/DCW/dcw-roads-shapefiles.tar.bz2">
 provided in shapefile format</a> by Stephen Woodbridge, and this version
-of that data is <a href="http://roadmap.digitalomaha.net/DCW/README-dcw-roads.txt">copyright</a> by Stephen Woodbridge.
+of that data is 
+<a href="http://roadmap.digitalomaha.net/DCW/README-dcw-roads.txt">
+copyright by him</a>.
 Steve is a RoadMap developer, and proprietor of
 <a href="http://iMaptools.com">http://iMaptools.com</a>, a provider   
 of low-cost geospatial solutions.  Thanks Steve!
